# fastapi-saas-kit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  TRACTION.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  authentication.md  billing-gates.md  deployment.md  multi-tenancy.md  plans-and-quotas.md  roles.md
examples/basic_saas/: README.md  main.py
examples/multi_tenant_app/: README.md  main.py
src/fastapi_saas_kit/: __init__.py  app.py  config.py  main.py
src/fastapi_saas_kit/auth/: __init__.py  dependencies.py  interfaces.py  jwt.py  mock.py  models.py
src/fastapi_saas_kit/billing/: __init__.py  interfaces.py  router.py
src/fastapi_saas_kit/billing/adapters/: __init__.py  mock.py  stripe_stub.py
src/fastapi_saas_kit/cache/: __init__.py  interfaces.py  memory.py
src/fastapi_saas_kit/database/: __init__.py  connection.py
src/fastapi_saas_kit/database/migrations/: 001_init.sql  002_multi_tenant.sql
src/fastapi_saas_kit/health/: router.py
src/fastapi_saas_kit/middleware/: __init__.py  error_handler.py  rate_limiter.py  security_headers.py
src/fastapi_saas_kit/plans/: __init__.py  access.py  config.py  quota.py
src/fastapi_saas_kit/tenancy/: __init__.py  models.py  router.py  service.py
tests/: conftest.py  test_auth.py  test_health.py  test_plans.py  test_rate_limiter.py  test_tenancy.py
