[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-saas-kit"
version = "0.1.0"
description = "FastAPI backend starter kit with auth, RBAC, teams, access tiers, usage limits, rate limiting, tests, Docker, and deployment-ready architecture."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "fastapi-saas-kit contributors"},
]
keywords = [
    "fastapi",
    "backend",
    "multi-tenant",
    "access-control",
    "rbac",
    "boilerplate",
    "python",
    "postgresql",
    "docker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
]
redis = [
    "redis>=5.0.0",
]
production = [
    "gunicorn>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/Devil-nkp/fastapi-saas-kit"
Documentation = "https://github.com/Devil-nkp/fastapi-saas-kit/tree/main/docs"
Repository = "https://github.com/Devil-nkp/fastapi-saas-kit"
Issues = "https://github.com/Devil-nkp/fastapi-saas-kit/issues"
Changelog = "https://github.com/Devil-nkp/fastapi-saas-kit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_saas_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",
    # FastAPI intentionally uses Depends(...) in endpoint defaults.
    "B008",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
